feat: add mocked menu
